php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46626 mb_convert_case does not handle apostrophe correctly
Submitted: 2008-11-20 01:38 UTC Modified: 2008-11-24 21:24 UTC
From: tbartels at gmail dot com Assigned:
Status: Closed Package: mbstring related
PHP Version: 5CVS-2008-11-21 OS: *
Private report: No CVE-ID: None
 [2008-11-20 01:38 UTC] tbartels at gmail dot com
Description:
------------
The first letter after an apostrophe of a possessive or conjugated word converted using MB_CASE_TITLE in mb_convert_case() get's capitalized incorrectly.

Reproduce code:
---------------
<?php
echo mb_convert_case("I'll never believe you couldn't see it!", MB_CASE_TITLE);
?>

Expected result:
----------------
I'll Never Believe You Couldn't See It!

Actual result:
--------------
I'Ll Never Believe You Couldn'T See It!

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-11-24 21:24 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC