MFB: Fixed bug #46626 (mb_convert_case does not handle apostrophe correctly)